# momentum_health_walking_reconstruction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: isblacked.yml  run_tests.yml
momentum_health_walking_reconstruction/: __init__.py  adder.py
momentum_health_walking_reconstruction/kinematics/: __init__.py  kinematics_reconstruction.py
momentum_health_walking_reconstruction/models/: __init__.py  lower_body.py  visualizer.py
momentum_health_walking_reconstruction/pipelines/: __init__.py  generate_all_models.py  generate_models.py  reconstruct_all_kinematics.py  visualize_all_kinematics.py
momentum_health_walking_reconstruction/utils/: __init__.py  data_markers.py  nexus_markers.py
runner/: main.py  main_c3d_to_csv.py  main_extract_header_info.py  main_kinematics_reconstruction.py  main_model_creation.py  main_visualize_reconstruction.py
tests/: test_file.py
