[build-system]
requires = [
    "setuptools", 
]
build-backend = "setuptools.build_meta"

[project]
name =  "momentum_health_walking_reconstruction"
description = "A generic interface to generate a virtual buddy"
dynamic = ["version"]
authors = [
    {name = "Pariterre", email = "pariterre@hotmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.10"
dependencies = [
    "biorbd",
    "bioviz",
    "biobuddy",
    "ezc3d", 
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Documentation = "https://github.com/s2mlab/momentum_health_walking_reconstruction/tree/main#readme"
Source = "https://github.com/s2mlab/momentum_health_walking_reconstruction"
Tracker = "https://github.com/s2mlab/momentum_health_walking_reconstruction/issues"

[tool.setuptools]
packages = ["momentum_health_walking_reconstruction"]

[tool.setuptools.dynamic]
version = {attr = "momentum_health_walking_reconstruction.__version__"}

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"